Add first implementation of harvesting all models